--- a/css/underconst.css
+++ b/css/underconst.css
@@ -26,7 +26,9 @@ html,body{
   justify-content:center;
   align-items: center;
   width: 100% auto;
-  height: 100vh;
+  height: 600vh;
+
+  border: 1px;
 
   background: #FFFFFF;
   overflow: hidden;
@@ -40,6 +42,7 @@ html,body{
   align-items: center;
   width: 1440px;
   height: 100vh;
+  top: 0%;
 
 }
 
@@ -49,7 +52,7 @@ html,body{
   width: 224px;
   height: 43px;
   left: 24.5%;
-  top: 43.37%;
+  top: 42.9%;
 
   font-family: 'Migra Italic';
   font-style: italic;
@@ -178,7 +181,7 @@ html,body{
   width: 195px;
   height: 0px;
   left: 24.2%;
-  top: 48%;
+  top: 48.4%;
 
   border-style: solid;
   border-color: #FA00FF;
@@ -186,9 +189,10 @@ html,body{
 }
 
 .notice_panel{
-  position: absolute;
+  position: fixed;
   width: 1107px;
   height: 741px;
+  z-index: 1;
 }
 
 .text-kr-div{
@@ -313,7 +317,7 @@ html,body{
   width: 84.2px;
   height: 0px;
   left: 47.2%;
-  top: 82.69%;
+  top: 82%;
 
   border: 0.1px solid #FA00FF;
   transform: rotate(90deg);
