--- a/css/afterglow.css
+++ b/css/afterglow.css
@@ -536,7 +536,7 @@ top: 3.7px;
   width: 195px;
   height: 0px;
   left: 20%;
-    top: 25px;  
+    top: 25px;
 
   border-style: solid;
   border-color: #FA00FF;
@@ -718,19 +718,20 @@ color: #000000;
     width: 120px;
     height: 20px;
     right: 19%;
-    top: 328%;
+    top: 329%;
     text-align: left;
     font-family: 'helvetica';
     font-style: normal;
     font-weight: 600;
     font-size: 15px;
     line-height: 20px;
+    transform:rotate(-0.03deg);
     color: #000000;
 
 }
 
 .nextproj:hover{
-text-decoration: underline; 
+text-decoration: underline;
 background-color: #10F901;
 /*cursor: url(cursor_01.png) 16 16,auto;*/
 cursor:pointer;
@@ -1007,22 +1008,23 @@ transform: translateX(15px);
     width: 150px;
     height: 20px;
     left: 20%;
-    top: 328%;
+    top: 329%;
     text-align: right;
     font-family: 'helvetica';
     font-style: normal;
     font-weight: 600;
     font-size: 15px;
     line-height: 20px;
+    transform:rotate(-0.03deg);
     color: #000000;
 }
 
 .prevproj:hover{
-    text-decoration: underline; 
+    text-decoration: underline;
     background-color: #10F901;
     cursor: pointer;
  }
-    
+
 .arrow_prev{
     position: absolute;
     display: flex;
