--- a/css/navy.css
+++ b/css/navy.css
@@ -537,7 +537,7 @@ top: 3.7px;
   width: 195px;
   height: 0px;
   left: 20%;
-    top: 25px;  
+    top: 25px;
 
   border-style: solid;
   border-color: #FA00FF;
@@ -719,18 +719,19 @@ color: #000000;
     width: 120px;
     height: 20px;
     right: 19%;
-    top: 211%;
+    top: 212%;
     text-align: left;
     font-family: 'helvetica';
     font-style: normal;
     font-weight: 600;
     font-size: 15px;
     line-height: 20px;
+    transform:rotate(-0.03deg);
     color: #000000;
 }
 
 .nextproj:hover{
-text-decoration: underline; 
+text-decoration: underline;
 background-color: #10F901;
 /*cursor: url(cursor_01.png) 16 16,auto;*/
 cursor: pointer;
@@ -1092,19 +1093,20 @@ color: #000000;
     width: 150px;
     height: 20px;
     left: 20%;
-    top: 211%;
+    top: 212%;
     text-align: right;
     font-family: 'helvetica';
     font-style: normal;
     font-weight: 600;
     font-size: 15px;
     line-height: 20px;
+    transform:rotate(-0.03deg);
     color: #000000;
 }
 
 
 .prevproj:hover{
-    text-decoration: underline; 
+    text-decoration: underline;
     background-color: #10F901;
     cursor: pointer;
 }
@@ -1124,5 +1126,3 @@ color: #000000;
     transform: rotateY(180deg);
     transition: 0.2s;
 }
-
-
