--- a/mobile/style.css
+++ b/mobile/style.css
@@ -241,17 +241,41 @@ footer{
 }
 
 .body{
-  position: absolute;
-  width: 100%;
-  height: 80%;
-  display: flex;
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  border: 1px solid #000;
 }
 
 .body h1{
-  padding: 30px;
-  margin: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  padding: 40px;
+  /* border-radius: 80px; */
+  background-color: #fff;
 
   font-family: "bit";
   font-size: 24px;
   text-decoration: underline;
+  color: #000;
+}
+
+video{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  height: 100vh;
+  transform: translate(-50%,-50%);
+}
+
+.blob{
+  position: relative;
+  width: 80%;
+  left: 10%;
+}
+
+#top-bar{
+  background-color: rgba(0,0,0,0);
 }
