--- a/css/main.css
+++ b/css/main.css
@@ -466,7 +466,7 @@ html{
   left: 24.24%;
   top: 33.2%;
 
-  font-family: 'NanumMyeongjo';
+  font-family: 'NM ExtraBold';
   font-style: normal;
   font-weight: 500;
   font-size: 36px;
