--- a/css/navy.css
+++ b/css/navy.css
@@ -1,6 +1,6 @@
 
 @font-face {
-    font-family: 'NM ExtraBold';
+    font-family: 'NanumMyeongjo';
     src: url('../srcs/fonts/NanumMyeongjo-Bold.ttf') format('opentype');
 }
 
